airflow error after change airflow onlt dag7 run

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,97 +27,83 @@ x-airflow-common:
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2-python3.9}
   environment:
     &airflow-common-env
-    # --- ADDED: Prevent Python from writing .pyc files ---
     PYTHONDONTWRITEBYTECODE: "1"
-
-    # --- Airflow Core Settings ---
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-    AIRFLOW__CORE__FERNET_KEY: '' # NOTE: Set a fixed key for production consistency
-    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true' # Default behavior
+    AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
-
-    # --- BASE Python Dependencies (Scheduler, Webserver, Triggerer, Worker Base) ---
-    # Lean list: Core providers, common clients
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-apache-airflow-providers-postgres apache-airflow-providers-redis apache-airflow-providers-celery psycopg2-binary redis celery>=5.2.0 beautifulsoup4 PyPDF2 pinecone python-dotenv mlflow google-cloud-storage dvc[gs] requests==2.31.0 gunicorn}
-
-    # --- Common Environment Variables (Available to all Airflow tasks) ---
-    # These are loaded from .env file mounted into the container or host environment
     OPENAI_API_KEY: ${OPENAI_API_KEY}
     LANGSMITH_API_KEY: ${LANGSMITH_API_KEY}
     LANGSMITH_PROJECT: ${LANGSMITH_PROJECT}
     LANGSMITH_TRACING: ${LANGSMITH_TRACING}
     PINECONE_API_KEY: ${PINECONE_API_KEY}
-    PINECONE_INDEX_NAME: ${PINECONE_INDEX_NAME} # Made available to tasks if needed
-    PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT} # Keep if pinecone client needs it
+    PINECONE_INDEX_NAME: ${PINECONE_INDEX_NAME}
+    PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT}
     HEVY_API_KEY: ${HEVY_API_KEY}
-    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000} # Tasks use this to find MLflow server
-    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts} # GCS bucket for artifacts
+    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000}
+    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
 
   volumes:
-    # Mount project root to /opt/airflow/app for access to src/, etc.
-    - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app:rw # Ensure read-write if needed
-    # Mount specific Airflow directories
-    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags:ro # Read-only recommended for DAGs
-    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs:rw # Needs read-write
-    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins:ro # Read-only recommended
-    - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/app/.env:ro # Mount .env read-only
+    - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app:rw
+    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags:ro
+    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs:rw
+    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins:ro
+    - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/app/.env:ro
 
-  # user: "${AIRFLOW_UID:-50000}:0" # Keep commented unless fixing permissions
-
-  # --- ADDED: Explicit Network Attachment ---
   networks:
-    - airflow_net # All airflow-common services will attach to this network
+    - airflow_net
 
-  depends_on: # Common dependencies for most Airflow services
+  # --- CORRECTED depends_on format within the anchor ---
+  depends_on:
     &airflow-common-depends-on
     redis:
       condition: service_healthy
     postgres:
       condition: service_healthy
+  # --- END CORRECTION ---
 
 services:
   postgres:
     image: postgres:13
-    container_name: personaltrainerai-postgres-1 # Optional: explicit naming
+    container_name: personaltrainerai-postgres-1
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
-      POSTGRES_DB: airflow # Single DB for Airflow & MLflow metadata (dev only)
+      POSTGRES_DB: airflow
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 10s; retries: 5; start_period: 5s
     restart: always
-    networks: # Attach to the defined network
+    networks:
       - airflow_net
 
   redis:
     image: redis:7.2-bookworm
-    container_name: personaltrainerai-redis-1 # Optional: explicit naming
+    container_name: personaltrainerai-redis-1
     expose:
       - 6379
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s; timeout: 30s; retries: 50; start_period: 30s
     restart: always
-    networks: # Attach to the defined network
+    networks:
       - airflow_net
 
   mlflow-server:
-    image: python:3.9-slim # Using slim image
+    image: python:3.9-slim
     container_name: personaltrainerai-mlflow-server-1
     environment:
-      # Uses same DB as Airflow, but separate tables within 'airflow' DB
       MLFLOW_BACKEND_STORE_URI: postgresql+psycopg2://airflow:airflow@postgres/airflow
       MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
-      # Note: GCS access relies on VM service account credentials
-    volumes: [] # No host volumes needed
+    volumes: []
     command: >
       bash -c "echo 'Ensuring pip...' && python3 -m ensurepip --upgrade && \
                echo 'Installing MLflow deps...' && pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && \
@@ -128,17 +114,17 @@ services:
                 --backend-store-uri $$MLFLOW_BACKEND_STORE_URI \
                 --default-artifact-root $$MLFLOW_ARTIFACT_ROOT"
     ports:
-      - "5001:5000" # Expose on host 5001 -> container 5000
+      - "5001:5000"
     restart: always
-    networks: # Attach to the defined network
+    networks:
       - airflow_net
-    depends_on:
+    depends_on: # Uses block style directly
       postgres:
-        condition: service_healthy # Ensure DB is ready before MLflow starts
+        condition: service_healthy
 
   airflow-webserver:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-webserver-1 # Optional: explicit naming
+    container_name: personaltrainerai-airflow-webserver-1
     command: webserver
     ports:
       - "8080:8080"
@@ -146,86 +132,81 @@ services:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
       interval: 30s; timeout: 10s; retries: 5; start_period: 30s
     restart: always
-    depends_on:
+    depends_on: # Uses anchor AND adds specific dependencies in block style
       <<: *airflow-common-depends-on
-      airflow-init: { condition: service_completed_successfully }
-      mlflow-server: { condition: service_started } # Wait for mlflow to start
+      airflow-init:
+        condition: service_completed_successfully
+      mlflow-server:
+        condition: service_started
 
   airflow-scheduler:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-scheduler-1 # Optional: explicit naming
+    container_name: personaltrainerai-airflow-scheduler-1
     command: scheduler
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8973/health"] # Correct port for Airflow 2.9+
-      interval: 30s; timeout: 10s; retries: 5; start_period: 60s # Increased start period
+      test: ["CMD", "curl", "--fail", "http://localhost:8973/health"]
+      interval: 30s; timeout: 10s; retries: 5; start_period: 60s
     restart: always
-    depends_on:
+    depends_on: # Uses anchor AND adds specific dependencies in block style
       <<: *airflow-common-depends-on
-      airflow-init: { condition: service_completed_successfully }
-      mlflow-server: { condition: service_started }
+      airflow-init:
+        condition: service_completed_successfully
+      mlflow-server:
+        condition: service_started
 
   airflow-worker:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-worker-1 # Optional: explicit naming
+    container_name: personaltrainerai-airflow-worker-1
     command: celery worker
     healthcheck:
       test: ["CMD-SHELL", 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"']
-      interval: 30s; timeout: 10s; retries: 5; start_period: 60s # Increased start period for dep install
+      interval: 30s; timeout: 10s; retries: 5; start_period: 60s
     environment:
       <<: *airflow-common-env
       DUMB_INIT_SETSID: "0"
-      # --- OVERRIDE: Install BASE + WORKER-SPECIFIC dependencies ---
-      _PIP_ADDITIONAL_REQUIREMENTS: "${_PIP_ADDITIONAL_REQUIREMENTS} langchain langchain-openai langchain_community langchain_huggingface openai ragas deepseek langsmith scikit-learn numpy pandas tqdm matplotlib sentence-transformers torch transformers datasets" # Append heavy libs
+      _PIP_ADDITIONAL_REQUIREMENTS: "${_PIP_ADDITIONAL_REQUIREMENTS} langchain langchain-openai langchain_community langchain_huggingface openai ragas deepseek langsmith scikit-learn numpy pandas tqdm matplotlib sentence-transformers torch transformers datasets"
     restart: always
-    depends_on:
+    depends_on: # Uses anchor AND adds specific dependencies in block style
       <<: *airflow-common-depends-on
-      airflow-init: { condition: service_completed_successfully }
-      mlflow-server: { condition: service_started }
+      airflow-init:
+        condition: service_completed_successfully
+      mlflow-server:
+        condition: service_started
 
   airflow-triggerer:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-triggerer-1 # Optional: explicit naming
+    container_name: personaltrainerai-airflow-triggerer-1
     command: triggerer
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
       interval: 30s; timeout: 10s; retries: 5; start_period: 30s
     restart: always
-    depends_on:
+    depends_on: # Uses anchor AND adds specific dependencies in block style
       <<: *airflow-common-depends-on
-      airflow-init: { condition: service_completed_successfully }
-      mlflow-server: { condition: service_started }
+      airflow-init:
+        condition: service_completed_successfully
+      mlflow-server:
+        condition: service_started
 
-  # --- AIRFLOW INIT SERVICE (Corrected Environment) ---
   airflow-init:
-    # Inherit only image, volumes, network from common
     image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2-python3.9}
-    volumes:
-      - ${AIRFLOW_PROJ_DIR:-.}:/sources:rw
-    networks:
-      - airflow_net
     container_name: personaltrainerai-airflow-init-1
     entrypoint: /bin/bash
-    command: # More explicit init steps
+    command:
       - -c
       - |
         set -e
         echo "Airflow Init: Starting initialization..."
-        # Ensure directories exist
         mkdir -p /sources/logs /sources/dags /sources/plugins /opt/airflow/logs /opt/airflow/dags /opt/airflow/plugins
-        # Permissions
         chmod -R 777 /sources/logs || echo "WARN: Failed chmod /sources/logs"
-        # Optional: Chown
         if [[ -n "${AIRFLOW_UID}" && "${AIRFLOW_UID}" != "0" ]]; then
           echo "Changing ownership for AIRFLOW_UID=${AIRFLOW_UID}..."
           chown -R "${AIRFLOW_UID}:0" /sources/logs /sources/dags /sources/plugins || echo "WARN: Failed chown /sources"
         fi
-        # Install necessary package ONLY for init
         echo "Installing psycopg2..."
-        pip install --no-cache-dir psycopg2-binary # Install DB driver
-        # Run DB migration
+        pip install --no-cache-dir psycopg2-binary
         echo "Running Airflow DB migrate..."
         airflow db migrate
-        # Create Admin User
         echo "Creating Airflow Admin User (user: ${_AIRFLOW_WWW_USER_USERNAME:-admin})..."
         airflow users create \
             --username "${_AIRFLOW_WWW_USER_USERNAME:-admin}" \
@@ -236,39 +217,39 @@ services:
             --email "${_AIRFLOW_WWW_USER_EMAIL:-admin@example.com}" || \
         echo "Admin user likely already exists."
         echo "Airflow Init: Initialization complete."
-    # Define environment explicitly for init - DOES NOT inherit from common
     environment:
-      # Define ONLY the variables needed by the 'command' script above
-      # DB connection string is crucial for 'db migrate' and 'users create'
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-      # Set admin user details directly or rely on defaults in the command script
       _AIRFLOW_WWW_USER_USERNAME: ${AIRFLOW_WWW_USER_USERNAME:-Vinyas}
       _AIRFLOW_WWW_USER_PASSWORD: ${AIRFLOW_WWW_USER_PASSWORD:-Vinyas}
       _AIRFLOW_WWW_USER_FIRSTNAME: ${_AIRFLOW_WWW_USER_FIRSTNAME:-Vinyas}
       _AIRFLOW_WWW_USER_LASTNAME: ${_AIRFLOW_WWW_USER_LASTNAME:-N}
       _AIRFLOW_WWW_USER_ROLE: ${_AIRFLOW_WWW_USER_ROLE:-Admin}
       _AIRFLOW_WWW_USER_EMAIL: ${_AIRFLOW_WWW_USER_EMAIL:-vinyas@example.com}
-      # Pass AIRFLOW_UID if set on host, needed for chown check inside script
       AIRFLOW_UID: ${AIRFLOW_UID:-}
-    user: "0:0" # Run init as root to perform setup actions
-    depends_on:
-      postgres: { condition: service_healthy }
-      redis: { condition: service_healthy }
-  # --- END AIRFLOW INIT SERVICE ---
+    user: "0:0"
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}:/sources:rw
+    networks:
+      - airflow_net
+    depends_on: # Uses block style directly
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
   airflow-cli:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-cli-1 # Optional: explicit naming
-    profiles: ["debug", "cli"] # Add cli profile
+    container_name: personaltrainerai-airflow-cli-1
+    profiles: ["debug", "cli"]
     environment:
-      <<: *airflow-common-env # Inherit common environment (uses BASE pip reqs)
+      <<: *airflow-common-env
       CONNECTION_CHECK_MAX_COUNT: "0"
-    command: ["bash"] # Keep running
+    command: ["bash"]
     tty: true
 
   flower:
     <<: *airflow-common
-    container_name: personaltrainerai-flower-1 # Optional: explicit naming
+    container_name: personaltrainerai-flower-1
     command: celery flower
     profiles: ["flower"]
     ports:
@@ -277,11 +258,12 @@ services:
       test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
       interval: 30s; timeout: 10s; retries: 5; start_period: 30s
     restart: always
-    depends_on:
+    depends_on: # Uses anchor AND adds specific dependencies in block style
       <<: *airflow-common-depends-on
-      airflow-init: { condition: service_completed_successfully }
-      mlflow-server: { condition: service_started }
-
+      airflow-init:
+        condition: service_completed_successfully
+      mlflow-server:
+        condition: service_started
 
 # --- Define the network ---
 networks:
