--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,5 @@
 # Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
-
-# Airflow + MLflow Docker Compose Configuration
-# Uses CeleryExecutor, Redis, PostgreSQL
-# Deploys Airflow components and a dedicated MLflow Tracking Server
+# ... (rest of license header) ...
 ---
 version: '3.8'
 
@@ -77,11 +59,9 @@ services:
       - postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
-      # --- CORRECTED Healthcheck Syntax ---
       interval: 10s
       retries: 5
       start_period: 5s
-      # --- END CORRECTION ---
     restart: always
     networks:
       - airflow_net
@@ -93,12 +73,10 @@ services:
       - 6379
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      # --- CORRECTED Healthcheck Syntax ---
       interval: 10s
       timeout: 30s
       retries: 50
       start_period: 30s
-      # --- END CORRECTION ---
     restart: always
     networks:
       - airflow_net
@@ -136,12 +114,10 @@ services:
       - "8080:8080"
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
-      # --- CORRECTED Healthcheck Syntax ---
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
-      # --- END CORRECTION ---
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
@@ -156,12 +132,10 @@ services:
     command: scheduler
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8973/health"]
-      # --- CORRECTED Healthcheck Syntax ---
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 60s
-      # --- END CORRECTION ---
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
@@ -176,12 +150,10 @@ services:
     command: celery worker
     healthcheck:
       test: ["CMD-SHELL", 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"']
-      # --- CORRECTED Healthcheck Syntax ---
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 60s
-      # --- END CORRECTION ---
     environment:
       <<: *airflow-common-env
       DUMB_INIT_SETSID: "0"
@@ -200,12 +172,10 @@ services:
     command: triggerer
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
-      # --- CORRECTED Healthcheck Syntax ---
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
-      # --- END CORRECTION ---
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
@@ -214,26 +184,54 @@ services:
       mlflow-server:
         condition: service_started
 
+  # --- AIRFLOW INIT SERVICE (More Robust Command) ---
   airflow-init:
     image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2-python3.9}
     container_name: personaltrainerai-airflow-init-1
     entrypoint: /bin/bash
+    # --- UPDATED COMMAND ---
     command:
       - -c
       - |
         set -e
-        echo "Airflow Init: Starting initialization..."
+        echo "Airflow Init: Starting..."
+        # Create dirs
         mkdir -p /sources/logs /sources/dags /sources/plugins /opt/airflow/logs /opt/airflow/dags /opt/airflow/plugins
-        chmod -R 777 /sources/logs || echo "WARN: Failed chmod /sources/logs"
+        # Set permissions (allow errors)
+        chmod -R 777 /sources/logs || echo "WARN: chmod logs failed"
+        # Chown (allow errors)
         if [[ -n "${AIRFLOW_UID}" && "${AIRFLOW_UID}" != "0" ]]; then
-          echo "Changing ownership for AIRFLOW_UID=${AIRFLOW_UID}..."
-          chown -R "${AIRFLOW_UID}:0" /sources/logs /sources/dags /sources/plugins || echo "WARN: Failed chown /sources"
+          echo "Attempting chown for UID ${AIRFLOW_UID}..."
+          chown -R "${AIRFLOW_UID}:0" /sources/logs /sources/dags /sources/plugins || echo "WARN: chown failed"
         fi
-        echo "Installing psycopg2..."
-        pip install --no-cache-dir psycopg2-binary
+
+        # Install psycopg2 with retry
+        attempt=1
+        max_attempts=3
+        until pip install --no-cache-dir psycopg2-binary || [ $$attempt -eq $$max_attempts ]
+        do
+            echo "Attempt $$attempt/$max_attempts: pip install psycopg2 failed. Retrying in 5 seconds..."
+            attempt=$$(( attempt + 1 ))
+            sleep 5
+        done
+        if ! command -v pip > /dev/null || ! pip show psycopg2-binary &> /dev/null; then
+           echo "ERROR: Failed to install psycopg2 after $$max_attempts attempts."
+           exit 1
+        fi
+        echo "psycopg2 installed successfully."
+
+        # Check DB connection before migrate (optional but good)
+        echo "Checking DB connection..."
+        airflow db check || { echo "ERROR: DB check failed!"; exit 1; }
+        echo "DB check successful."
+
+        # Run DB migration
         echo "Running Airflow DB migrate..."
-        airflow db migrate
-        echo "Creating Airflow Admin User (user: ${_AIRFLOW_WWW_USER_USERNAME:-admin})..."
+        airflow db migrate || { echo "ERROR: DB migrate failed!"; exit 1; }
+        echo "DB migrate successful."
+
+        # Create Admin User
+        echo "Creating/Verifying Airflow Admin User (user: ${_AIRFLOW_WWW_USER_USERNAME:-admin})..."
         airflow users create \
             --username "${_AIRFLOW_WWW_USER_USERNAME:-admin}" \
             --password "${_AIRFLOW_WWW_USER_PASSWORD:-admin}" \
@@ -241,9 +239,12 @@ services:
             --lastname "${_AIRFLOW_WWW_USER_LASTNAME:-User}" \
             --role "${_AIRFLOW_WWW_USER_ROLE:-Admin}" \
             --email "${_AIRFLOW_WWW_USER_EMAIL:-admin@example.com}" || \
-        echo "Admin user likely already exists."
+        echo "INFO: Admin user likely already exists or another error occurred (ignoring)."
+
         echo "Airflow Init: Initialization complete."
+    # --- END UPDATED COMMAND ---
     environment:
+      # Explicit environment, does NOT inherit common env vars
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
       _AIRFLOW_WWW_USER_USERNAME: ${AIRFLOW_WWW_USER_USERNAME:-Vinyas}
       _AIRFLOW_WWW_USER_PASSWORD: ${AIRFLOW_WWW_USER_PASSWORD:-Vinyas}
@@ -252,7 +253,7 @@ services:
       _AIRFLOW_WWW_USER_ROLE: ${_AIRFLOW_WWW_USER_ROLE:-Admin}
       _AIRFLOW_WWW_USER_EMAIL: ${_AIRFLOW_WWW_USER_EMAIL:-vinyas@example.com}
       AIRFLOW_UID: ${AIRFLOW_UID:-}
-    user: "0:0"
+    user: "0:0" # Run as root
     volumes:
       - ${AIRFLOW_PROJ_DIR:-.}:/sources:rw
     networks:
@@ -262,6 +263,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+  # --- END AIRFLOW INIT SERVICE ---
 
   airflow-cli:
     <<: *airflow-common
@@ -272,7 +274,7 @@ services:
       CONNECTION_CHECK_MAX_COUNT: "0"
     command: ["bash"]
     tty: true
-    networks: # Add network to cli
+    networks:
       - airflow_net
 
   flower:
@@ -284,12 +286,10 @@ services:
       - "5555:5555"
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
-      # --- CORRECTED Healthcheck Syntax ---
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 30s
-      # --- END CORRECTION ---
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
