--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,14 +14,14 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
+#
 
-# Airflow + MLflow Docker Compose Configuration
-# Uses CeleryExecutor, Redis, PostgreSQL
-# Deploys Airflow components and a dedicated MLflow Tracking Server
+# Basic Airflow cluster configuration for CeleryExecutor with Redis and PostgreSQL.
+# --- Includes MLflow Server ---
+#
+# WARNING: This configuration is for local development/testing. Do not use it in a production deployment without review.
+# [...] (Keep existing comments about variables)
 ---
-# Removed obsolete version: '3.8'
-
-# Common configuration reusable across Airflow services
 x-airflow-common:
   &airflow-common
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2-python3.9}
@@ -35,36 +35,37 @@ x-airflow-common:
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
-    AIRFLOW__CORE__FERNET_KEY: '' # NOTE: Set a fixed key for production consistency
-    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true' # Default behavior
+    AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true' # Default, specific DAGs can override
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
 
     # --- BASE Python Dependencies (Scheduler, Webserver, Triggerer, Worker Base) ---
+    # Lean list: Core providers, clients needed by most components
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-apache-airflow-providers-postgres apache-airflow-providers-redis apache-airflow-providers-celery psycopg2-binary redis celery>=5.2.0 beautifulsoup4 PyPDF2 pinecone python-dotenv mlflow google-cloud-storage dvc[gs] requests==2.31.0 gunicorn}
 
-    # --- Common Environment Variables (Available to all Airflow tasks) ---
+    # --- Environment Variables Passed to Tasks (from Host or .env file) ---
+    # These are loaded via .env mount and load_dotenv() in scripts OR inherited by tasks
     OPENAI_API_KEY: ${OPENAI_API_KEY}
     LANGSMITH_API_KEY: ${LANGSMITH_API_KEY}
     LANGSMITH_PROJECT: ${LANGSMITH_PROJECT}
     LANGSMITH_TRACING: ${LANGSMITH_TRACING}
     PINECONE_API_KEY: ${PINECONE_API_KEY}
     PINECONE_INDEX_NAME: ${PINECONE_INDEX_NAME}
-    PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT}
+    PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT} # Keep if pinecone client needs it
     HEVY_API_KEY: ${HEVY_API_KEY}
-    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000}
-    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
+    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000} # For tasks to log to mlflow-server container
+    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts} # For tasks & mlflow server
 
   volumes:
-    - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app:rw
-    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags:ro
-    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs:rw
-    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins:ro
-    - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/app/.env:ro
+    - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app # Mount project code
+    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/app/.env # Mount .env file inside app dir
 
-  networks:
-    - airflow_net
+  # user: "${AIRFLOW_UID:-50000}:0" # Keep commented out unless needed
 
   depends_on:
     &airflow-common-depends-on
@@ -76,7 +77,6 @@ x-airflow-common:
 services:
   postgres:
     image: postgres:13
-    container_name: personaltrainerai-postgres-1
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
@@ -89,12 +89,9 @@ services:
       retries: 5
       start_period: 5s
     restart: always
-    networks:
-      - airflow_net
 
   redis:
     image: redis:7.2-bookworm
-    container_name: personaltrainerai-redis-1
     expose:
       - 6379
     healthcheck:
@@ -104,37 +101,39 @@ services:
       retries: 50
       start_period: 30s
     restart: always
-    networks:
-      - airflow_net
 
+  # --- MLFLOW SERVER SERVICE (with pip install fix) ---
   mlflow-server:
-    image: python:3.9-slim
+    image: python:3.9-slim # Using slim image
     container_name: personaltrainerai-mlflow-server-1
     environment:
+      # Uses same DB as Airflow, but separate tables within 'airflow' DB
       MLFLOW_BACKEND_STORE_URI: postgresql+psycopg2://airflow:airflow@postgres/airflow
       MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
-    volumes: []
+      # Pass GCS credentials implicitly via VM service account
+    volumes: [] # No host volumes needed for this simple setup
     command: >
-      bash -c "echo 'Ensuring pip...' && python3 -m ensurepip --upgrade && \
-               echo 'Installing MLflow deps...' && pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && \
-               echo 'Starting MLflow server...' && \
+      bash -c "echo 'Ensuring pip is installed...' &&
+               python3 -m ensurepip --upgrade && # <<< FIX: Install/upgrade pip
+               echo 'Installing MLflow dependencies...' &&
+               pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && # Install necessary packages
+               echo 'Starting MLflow server...' &&
                mlflow server \
                 --host 0.0.0.0 \
                 --port 5000 \
                 --backend-store-uri $$MLFLOW_BACKEND_STORE_URI \
                 --default-artifact-root $$MLFLOW_ARTIFACT_ROOT"
     ports:
-      - "5001:5000"
+      - "5001:5000" # Expose MLflow UI on host port 5001
     restart: always
-    networks:
-      - airflow_net
     depends_on:
       postgres:
-        condition: service_healthy
+        condition: service_healthy # Ensure DB is ready before MLflow starts
+  # --- END MLFLOW SERVER SERVICE ---
 
   airflow-webserver:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-webserver-1
+    # Uses BASE dependencies defined in x-airflow-common
     command: webserver
     ports:
       - "8080:8080"
@@ -149,52 +148,53 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-      mlflow-server:
-        condition: service_started
+      mlflow-server: # Wait for mlflow server to be started
+         condition: service_started
 
   airflow-scheduler:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-scheduler-1
+    # Uses BASE dependencies defined in x-airflow-common
     command: scheduler
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8973/health"]
+      test: ["CMD", "curl", "--fail", "http://localhost:8973/health"] # Airflow 2.9+ scheduler health port
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 60s
+      start_period: 30s
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
       mlflow-server:
-        condition: service_started
+         condition: service_started
 
   airflow-worker:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-worker-1
     command: celery worker
     healthcheck:
       test: ["CMD-SHELL", 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"']
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 60s
+      start_period: 30s # Give worker time to install potentially heavy deps
     environment:
-      <<: *airflow-common-env
-      DUMB_INIT_SETSID: "0"
-      _PIP_ADDITIONAL_REQUIREMENTS: "${_PIP_ADDITIONAL_REQUIREMENTS} langchain langchain-openai langchain_community langchain_huggingface openai ragas deepseek langsmith scikit-learn numpy pandas tqdm matplotlib sentence-transformers torch transformers datasets"
+      <<: *airflow-common-env # Inherit BASE env vars (DB, Redis, Core, etc.)
+      DUMB_INIT_SETSID: "0" # Specific worker setting
+      # --- OVERRIDE: Add worker-specific heavy requirements ---
+      # Concatenates BASE list (from common env) with WORKER-SPECIFIC list
+      _PIP_ADDITIONAL_REQUIREMENTS: "${_PIP_ADDITIONAL_REQUIREMENTS:-apache-airflow-providers-postgres apache-airflow-providers-redis apache-airflow-providers-celery psycopg2-binary redis celery>=5.2.0 beautifulsoup4 PyPDF2 pinecone python-dotenv mlflow google-cloud-storage dvc[gs] requests==2.31.0 gunicorn} langchain langchain-openai langchain_community langchain_huggingface openai ragas deepseek langsmith scikit-learn numpy pandas tqdm matplotlib sentence-transformers torch transformers datasets"
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
       mlflow-server:
-        condition: service_started
+         condition: service_started
 
   airflow-triggerer:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-triggerer-1
+    # Uses BASE dependencies defined in x-airflow-common
     command: triggerer
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
@@ -208,106 +208,93 @@ services:
       airflow-init:
         condition: service_completed_successfully
       mlflow-server:
-        condition: service_started
+         condition: service_started
 
-  # --- AIRFLOW INIT SERVICE (Corrected Command with Escaped $$) ---
+  # --- AIRFLOW INIT SERVICE ---
+  # Runs once to init/migrate DB and check setup
   airflow-init:
-    image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2-python3.9}
-    container_name: personaltrainerai-airflow-init-1
+    <<: *airflow-common
     entrypoint: /bin/bash
-    # --- UPDATED COMMAND with $$ for shell variables ---
     command:
       - -c
       - |
-        set -e
-        echo "Airflow Init: Starting..."
-        mkdir -p /sources/logs /sources/dags /sources/plugins /opt/airflow/logs /opt/airflow/dags /opt/airflow/plugins
-        chmod -R 777 /sources/logs || echo "WARN: chmod logs failed"
-        # Use $$AIRFLOW_UID for shell variable access within the script
-        if [[ -n "$${AIRFLOW_UID}" && "$${AIRFLOW_UID}" != "0" ]]; then
-          echo "Attempting chown for UID $${AIRFLOW_UID}..."
-          chown -R "$${AIRFLOW_UID}:0" /sources/logs /sources/dags /sources/plugins || echo "WARN: chown failed"
+        set -e # Exit immediately if a command exits with a non-zero status.
+        # Check resources (keep existing checks)
+        # ...
+
+        # Check .env permissions only if AIRFLOW_UID is set (for non-root execution)
+        if [[ -n "${AIRFLOW_UID}" && "${AIRFLOW_UID}" != "0" ]]; then
+          # Add check for .env file readability by AIRFLOW_UID if needed
+          echo "Checking .env file permissions (if AIRFLOW_UID is set)..."
+          # Example check: test -r /sources/.env || { echo "ERROR: .env file not readable by AIRFLOW_UID=${AIRFLOW_UID}"; exit 1; }
         fi
 
-        # Install psycopg2 with retry (Use $$ for shell variables attempt & max_attempts)
-        attempt=1
-        max_attempts=3
-        until pip install --no-cache-dir psycopg2-binary || [ $$attempt -eq $$max_attempts ]
-        do
-            echo "Attempt $$attempt/$$max_attempts: pip install psycopg2 failed. Retrying in 5 seconds..."
-            attempt=$$(( attempt + 1 )) # Use $$ for arithmetic expansion
-            sleep 5
-        done
-        if ! command -v pip > /dev/null || ! pip show psycopg2-binary &> /dev/null; then
-           echo "ERROR: Failed to install psycopg2 after $$max_attempts attempts."
-           exit 1
+        # Ensure directories exist where volumes are mounted on host check path (/sources)
+        mkdir -p /sources/logs /sources/dags /sources/plugins
+        echo "Attempting to make /sources/logs writable by all..."
+        chmod -R 777 /sources/logs || echo "WARN: Failed to chmod /sources/logs"
+
+        # Correct permissions on host mounts IF AIRFLOW_UID is set and non-root
+        if [[ -n "${AIRFLOW_UID}" && "${AIRFLOW_UID}" != "0" ]]; then
+          echo "Changing ownership of /sources/* to ${AIRFLOW_UID}:0..."
+          # Be careful with chown on the root of the mount if project has many files
+          chown -R "${AIRFLOW_UID}:0" /sources/logs /sources/dags /sources/plugins || echo "WARN: Failed to chown basic dirs in /sources"
+        else
+           echo "Running as root or AIRFLOW_UID not set, skipping chown."
         fi
-        echo "psycopg2 installed successfully."
 
-        # Check DB connection
-        echo "Checking DB connection..."
-        airflow db check || { echo "ERROR: DB check failed!"; exit 1; }
-        echo "DB check successful."
+        # Ensure standard Airflow directories exist inside the final container path
+        mkdir -p /opt/airflow/logs /opt/airflow/dags /opt/airflow/plugins
 
-        # Run DB migration
+        # Check DB Migrations and User Creation
         echo "Running Airflow DB migrate..."
-        airflow db migrate || { echo "ERROR: DB migrate failed!"; exit 1; }
-        echo "DB migrate successful."
-
-        # Create Admin User (Use $$ for environment vars used inside the script)
-        echo "Creating/Verifying Airflow Admin User (user: $${_AIRFLOW_WWW_USER_USERNAME:-admin})..."
+        airflow db migrate
+        echo "Creating Airflow Admin User..."
         airflow users create \
-            --username "$${_AIRFLOW_WWW_USER_USERNAME:-admin}" \
-            --password "$${_AIRFLOW_WWW_USER_PASSWORD:-admin}" \
-            --firstname "$${_AIRFLOW_WWW_USER_FIRSTNAME:-Default}" \
-            --lastname "$${_AIRFLOW_WWW_USER_LASTNAME:-User}" \
-            --role "$${_AIRFLOW_WWW_USER_ROLE:-Admin}" \
-            --email "$${_AIRFLOW_WWW_USER_EMAIL:-admin@example.com}" || \
-        echo "INFO: Admin user likely already exists or another error occurred (ignoring)."
+            --username "${_AIRFLOW_WWW_USER_USERNAME:-admin}" \
+            --password "${_AIRFLOW_WWW_USER_PASSWORD:-admin}" \
+            --firstname "${_AIRFLOW_WWW_USER_FIRSTNAME:-Admin}" \
+            --lastname "${_AIRFLOW_WWW_USER_LASTNAME:-User}" \
+            --role "${_AIRFLOW_WWW_USER_ROLE:-Admin}" \
+            --email "${_AIRFLOW_WWW_USER_EMAIL:-admin@example.com}" || \
+        echo "Admin user already exists or failed to create."
 
-        echo "Airflow Init: Initialization complete."
-    # --- END UPDATED COMMAND ---
+        echo "Airflow initialization checks complete."
+        # Note: Removed 'exec /entrypoint airflow version' as migrate/users create are sufficient checks
     environment:
-      # Environment variables passed TO the init container (use single $ here)
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-      # Admin user details from host env or defaults
-      _AIRFLOW_WWW_USER_USERNAME: ${AIRFLOW_WWW_USER_USERNAME:-Vinyas}
-      _AIRFLOW_WWW_USER_PASSWORD: ${AIRFLOW_WWW_USER_PASSWORD:-Vinyas}
+      <<: *airflow-common-env
+      # Override _PIP_ADDITIONAL_REQUIREMENTS for init - only needs core airflow+db driver
+      _PIP_ADDITIONAL_REQUIREMENTS: 'psycopg2-binary'
+      _AIRFLOW_DB_MIGRATE: 'false' # Set to false, we run migrate explicitly
+      _AIRFLOW_WWW_USER_CREATE: 'false' # Set to false, we run users create explicitly
+      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-Vinyas} # Use your desired admin user
+      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-Vinyas} # Use your desired admin pass
       _AIRFLOW_WWW_USER_FIRSTNAME: ${_AIRFLOW_WWW_USER_FIRSTNAME:-Vinyas}
       _AIRFLOW_WWW_USER_LASTNAME: ${_AIRFLOW_WWW_USER_LASTNAME:-N}
       _AIRFLOW_WWW_USER_ROLE: ${_AIRFLOW_WWW_USER_ROLE:-Admin}
       _AIRFLOW_WWW_USER_EMAIL: ${_AIRFLOW_WWW_USER_EMAIL:-vinyas@example.com}
-      # Pass host AIRFLOW_UID for chown check inside script
-      AIRFLOW_UID: ${AIRFLOW_UID:-}
-    user: "0:0" # Run init as root
+    user: "0:0" # Run init as root to perform setup actions
     volumes:
-      - ${AIRFLOW_PROJ_DIR:-.}:/sources:rw
-    networks:
-      - airflow_net
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+      # Mount project dir to /sources for init checks
+      - ${AIRFLOW_PROJ_DIR:-.}:/sources
   # --- END AIRFLOW INIT SERVICE ---
 
   airflow-cli:
     <<: *airflow-common
-    container_name: personaltrainerai-airflow-cli-1
-    profiles: ["debug", "cli"]
+    profiles:
+      - debug
     environment:
-      <<: *airflow-common-env
+      <<: *airflow-common-env # Uses BASE dependencies
       CONNECTION_CHECK_MAX_COUNT: "0"
-    command: ["bash"]
-    tty: true
-    networks:
-      - airflow_net
+    command: ["bash"] # Keep container running for exec
+    tty: true # Allocate pseudo-TTY
 
   flower:
     <<: *airflow-common
-    container_name: personaltrainerai-flower-1
+    # Uses BASE dependencies
     command: celery flower
-    profiles: ["flower"]
+    profiles:
+      - flower
     ports:
       - "5555:5555"
     healthcheck:
@@ -323,11 +310,6 @@ services:
         condition: service_completed_successfully
       mlflow-server:
         condition: service_started
-
-# --- Define the network ---
-networks:
-  airflow_net:
-    driver: bridge
 
 volumes:
   postgres-db-volume:
