--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,26 +79,19 @@ services:
              python3 -m ensurepip --upgrade && \
              echo 'Installing MLflow dependencies...' && \
              pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && \
-             echo 'Running MLflow DB migration...' && \
-             mlflow db upgrade $MLFLOW_BACKEND_STORE_URI && \
              echo 'Starting MLflow server...' && \
              mlflow server \
               --host 0.0.0.0 \
               --port 5000 \
-              --backend-store-uri $MLFLOW_BACKEND_STORE_URI \
-              --default-artifact-root $MLFLOW_ARTIFACT_ROOT"
+              --backend-store-uri \$MLFLOW_BACKEND_STORE_URI \
+              --default-artifact-root \$MLFLOW_ARTIFACT_ROOT"
     ports:
       - "5001:5000"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000"]
-      interval: 10s
-      timeout: 10s
-      retries: 5
     restart: always
     depends_on:
       postgres:
         condition: service_healthy
-
+  
   airflow-webserver:
     <<: *airflow-common
     command: webserver
