--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -91,7 +91,12 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-  
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:5000/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   airflow-webserver:
     <<: *airflow-common
     command: webserver
