--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,12 +71,15 @@ services:
     image: python:3.9-slim
     container_name: personaltrainerai-mlflow-server-1
     environment:
-      MLFLOW_BACKEND_STORE_URI: postgresql+psycopg2://airflow:airflow@postgres/airflow
+      MLFLOW_BACKEND_STORE_URI: ${MLFLOW_BACKEND_STORE_URI:-postgresql+psycopg2://airflow:airflow@postgres/airflow}
       MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
     command: >
       bash -c "python3 -m ensurepip --upgrade && \
                pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && \
-               mlflow server --host 0.0.0.0 --port 5000 \
+               echo 'Starting MLflow server...' && \
+               mlflow server \
+               --host 0.0.0.0 \
+               --port 5000 \
                --backend-store-uri \$MLFLOW_BACKEND_STORE_URI \
                --default-artifact-root \$MLFLOW_ARTIFACT_ROOT"
     ports:
