--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ x-airflow-common:
     PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT}
     HEVY_API_KEY: ${HEVY_API_KEY}
     MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000}
-    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
+    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-/mlflow/artifacts}
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
@@ -71,28 +71,27 @@ services:
     image: python:3.9-slim
     container_name: personaltrainerai-mlflow-server-1
     environment:
-      MLFLOW_BACKEND_STORE_URI: ${MLFLOW_BACKEND_STORE_URI:-postgresql+psycopg2://airflow:airflow@postgres/airflow}
-      MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
+      MLFLOW_BACKEND_STORE_URI: sqlite:///mlflow/mlflow.db
+      MLFLOW_ARTIFACT_ROOT: /mlflow/artifacts
+    volumes:
+      - ./mlflow:/mlflow
     command: >
       bash -c "python3 -m ensurepip --upgrade && \
-               pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && \
-               echo 'Starting MLflow server...' && \
+               pip install --no-cache-dir mlflow==2.11.1 && \
                mlflow server \
                --host 0.0.0.0 \
                --port 5000 \
-               --backend-store-uri \$MLFLOW_BACKEND_STORE_URI \
-               --default-artifact-root \$MLFLOW_ARTIFACT_ROOT"
+               --backend-store-uri sqlite:///mlflow/mlflow.db \
+               --default-artifact-root /mlflow/artifacts"
     ports:
       - "5001:5000"
     restart: always
-    depends_on:
-      postgres:
-        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:5000/"]
       interval: 10s
       timeout: 10s
       retries: 5
+
 
   airflow-webserver:
     <<: *airflow-common
