--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -87,10 +87,11 @@ services:
       - "5001:5000"
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://127.0.0.1:5000/"]
+      test: ["CMD", "python3", "-c", "import socket; s=socket.socket(); s.settimeout(2); s.connect(('localhost', 5000))"]
       interval: 10s
       timeout: 10s
       retries: 5
+
 
   airflow-webserver:
     <<: *airflow-common
