--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,8 @@
 HEVY_API_KEY="xxx"
-OPENAI_API_KEY="sk-proj-xxx"
-PINECONE_API_KEY="pcsk_xxx"
-LANGSMITH_API="lsv2_xxx"
-GROQ_API="gsk_xxx"
+OPENAI_API_KEY="xxx"
+PINECONE_API_KEY="xxx"
+LANGSMITH_API="xxx"
+GROQ_API="xxx"
 LANGSMITH_TRACING=true
 LANGSMITH_PROJECT="personal-trainer-ai"
 POSTGRES_USER=pranav
@@ -17,3 +17,5 @@ LOGGING_LEVEL=INFO
 LOGSTASH_HOST="host.docker.internal"
 LOGSTASH_PORT="5044"
 ENVIRONMENT="development"
+PORT=8080
+SQLALCHEMY_URL="postgresql://pranav:chatbot_db@localhost:5432/chatbot_db"
